# local-private-rag

./: CLAUDE.md  README.md  cli.py  pyproject.toml
src/: chunker.py  config.py  embed.py  generate.py  query.py  settings.py  vectordb.py
src/ingest/: email.py  imessage.py
src/web/: app.py  tasks.py
src/web/routes/: ingest.py  query.py  settings.py  status.py
src/web/static/: style.css
src/web/templates/: base.html  index.html  ingest.html  settings.html  status.html
src/web/templates/partials/: ingest_progress.html  settings_result.html  status_cards.html
tests/: conftest.py  test_chunker.py  test_cli.py  test_config.py  test_email.py  test_embed.py  test_imessage.py  test_query.py  test_settings.py  test_vectordb.py
