[project]
name = "personal-rag"
version = "0.1.0"
description = "Local-only RAG system for iMessage and Apple Mail"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "requests",
    "python-dotenv",
    "beautifulsoup4",
    "fastapi",
    "uvicorn[standard]",
    "jinja2",
    "python-multipart",
]

[project.scripts]
personal-rag = "cli:main"
