[project]
name = "personal-rag"
version = "0.1.0"
description = "Local-only RAG system for iMessage and Apple Mail"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0,<3",
    "requests>=2.31,<3",
    "python-dotenv>=1.0,<2",
    "beautifulsoup4>=4.12,<5",
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "jinja2>=3.1,<4",
    "python-multipart>=0.0.18,<1",
]

[project.scripts]
personal-rag = "cli:main"
